--- a/src/Components/About/AboutOutreach.css
+++ b/src/Components/About/AboutOutreach.css
@@ -20,12 +20,11 @@
 
 #AboutOutreach_image img {
   position: relative;
-  max-width: 40.546rem;
+  max-width: 648.74px;
   width: 100%;
 }
 
 #AboutOutreach_content {
-  justify-self: end;
   box-sizing: border-box;
   position: relative;
   width: fit-content;
